--- a/views/mail_templates.xml
+++ b/views/mail_templates.xml
@@ -74,11 +74,12 @@
         <record id="calendar_template_meeting_invitation_mk" model="email.template">
             <field name="name">Meeting Invitation (MK)</field>
             <field name="email_from">${object.event_id.user_id.email or ''}</field>
+            <field name="reply_to">${object.event_id.user_id.email or ''}</field>
             <field name="subject">${object.event_id.name}</field>
             <field name="model_id" ref="calendar.model_calendar_attendee"/>            
             <field name="email_to" >${('' if object.partner_id and object.partner_id.email and object.partner_id.email==object.email else object.email|safe)}</field>
             <field name="partner_to">${object.partner_id and object.partner_id.email and object.partner_id.email==object.email and object.partner_id.id or False }</field>
-            <field name="auto_delete" eval="True"/>            
+            <field name="auto_delete" eval="False"/>
             <field name="body_html"><![CDATA[
 <html>
     <head>
@@ -154,11 +155,9 @@
                     </tr>
                 </table>
             </div>
-            <div style="height: auto;width:700px; margin:0 auto;padding-top:20px;padding-bottom:40px;">
-                <a style="padding: 8px 30px 8px 30px;border-radius: 6px;border: 1px solid #CCCCCC;background:#8A89BA;margin : 0 15px 0 0;text-decoration: none;color:#FFFFFF;" href="/calendar/meeting/accept?db=${'dbname' in ctx and ctx['dbname'] or ''}&token=${object.access_token}&action=${'action_id' in ctx and ctx['action_id'] or ''}&id=${object.event_id.id}">Прифати</a>
-                <a style="padding: 8px 30px 8px 30px;border-radius: 6px;border: 1px solid #CCCCCC;background:#808080;margin : 0 15px 0 0;text-decoration: none;color:#FFFFFF;" href="/calendar/meeting/decline?db=${'dbname' in ctx and ctx['dbname'] or '' }&token=${object.access_token}&action=${'action_id' in ctx and ctx['action_id'] or ''}&id=${object.event_id.id}">Одбиј</a>
-                <a style="padding: 8px 30px 8px 30px;border-radius: 6px;border: 1px solid #CCCCCC;background:#D8D8D8;text-decoration: none;color:#FFFFFF;" href="/calendar/meeting/view?db=${'dbname' in ctx and ctx['dbname'] or ''}&token=${object.access_token}&action=${'action_id' in ctx and ctx['action_id'] or ''}&id=${object.event_id.id}">Погледни детали за состанокот</a>
-            </div> 
+            <div style="height: 50px;text-align: left;font-size : 14px;border-collapse: separate;margin-top:10px">
+                <p>Ве молиме да го потврдите Вашето присуство со одговор на овој меил.</p> 
+            </div>
         </div>
     </body>
 </html>
