--- a/views/target_views.xml
+++ b/views/target_views.xml
@@ -112,11 +112,11 @@
                 <xpath expr="//button[@name='register_payment']" position="attributes">
                     <attribute name="groups">target_features.role_target_accountant_res_groups</attribute>
                 </xpath>
-                <xpath expr="//field[@name='price_unit']" position="attributes">
+                <!-- xpath expr="//field[@name='price_unit']" position="attributes">
                     <attribute name="invisible">1</attribute>
-                </xpath>
+                </xpath -->
                 <xpath expr="//field[@name='price_unit']" position="after">
-                    <field name="price_unit_cp"/>
+                    <field name="price_unit_cp" invisible="1"/>
                 </xpath>
             </field>
         </record>
@@ -401,11 +401,11 @@
                 <xpath expr="//button[@name='invoice_open']" position="attributes">
                     <attribute name="groups">target_features.role_target_accountant_res_groups,target_features.role_target_manager_res_groups</attribute>
                 </xpath>
-                <xpath expr="//field[@name='price_unit']" position="attributes">
+                <!-- xpath expr="//field[@name='price_unit']" position="attributes">
                     <attribute name="invisible">1</attribute>
-                </xpath>
+                </xpath -->
                 <xpath expr="//field[@name='price_unit']" position="after">
-                    <field name="price_unit_cp"/>
+                    <field name="price_unit_cp" invisible="1"/>
                 </xpath>
             </field>
         </record>
