--- a/views/target_views.xml
+++ b/views/target_views.xml
@@ -199,9 +199,9 @@
                 <xpath expr="//field[@name='use_timesheets']" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </xpath>
-                <xpath expr="//header" position="attributes">
+                <!--xpath expr="//header" position="attributes">
                     <attribute name="invisible">1</attribute>
-                </xpath>
+                </xpath-->
             </field>
         </record>
         
