--- a/views/target_views.xml
+++ b/views/target_views.xml
@@ -27,6 +27,18 @@
                 <xpath expr="//button[@name='cancel']" position="attributes">
                     <attribute name="states">draft,approved,sent,waiting_approval</attribute>
                 </xpath>
+                <xpath expr="//field[@name='order_line']/form/group[1]/group[1]/field[@name='price_unit']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+                <xpath expr="//field[@name='order_line']/form/group[1]/group[1]/field[@name='price_unit']" position="after">
+                    <field name="price_unit_cp"/>
+                </xpath>
+                <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+                <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="after">
+                    <field name="price_unit_cp"/>
+                </xpath>
             </field>
         </record>
         
