--- a/report/account_proforma_invoice_report.xml
+++ b/report/account_proforma_invoice_report.xml
@@ -80,7 +80,9 @@
                             <td class="text-right">
                                 <span t-field="l.price_unit"/>
                             </td>
-                            <td groups="sale.group_discount_per_so_line"><span t-field="l.discount"/></td>
+                            <td class="text-right" groups="sale.group_discount_per_so_line">
+                                <span t-field="l.discount"/>
+                            </td>
                             <td class="text-right">
                                 <span t-esc="', '.join(map(lambda x: x.name, l.proforma_line_tax))"/>
                             </td>
