--- a/views/activation_templates.xml
+++ b/views/activation_templates.xml
@@ -31,8 +31,8 @@
 <p>Ве молиме детално да ги прочитате општите услови за користење на БизнисМрежа и да не известите дали се согласувате со истите во рок од 5 работни дена. Доколку не добиеме повратен одговор во рок од 5 работни дена, ќе сметаме дека целосно се согласувате и ги прифаќате општите услови. </p>
 <p>За било какви прашања околу апликацијата контактирајте го вашиот личен советник. </p>
 <p>
-    <span>Ваш советник: </span><b>Фросина Мирчески</b><br/>
-    <span>Телефон: </span><b>071/397-498</b><br/>
+    <span>Ваш советник: </span><b><span t-esc="user.name"/></b><br/>
+    <span>Телефон: </span><b>${user.partner_id.mobile or user.partner_id.phone or ''}</b><br/>
     <span>Е-пошта: </span><a href="mailto:support@targetgroup.mk">support@targetgroup.mk</a>
 </p>
 <p class="text-muted">
@@ -88,8 +88,8 @@
 <p>Ве молиме детално да ги прочитате општите услови за користење на БизнисМрежа и да не известите дали се согласувате со истите во рок од 5 работни дена. Доколку не добиеме повратен одговор во рок од 5 работни дена, ќе сметаме дека целосно се согласувате и ги прифаќате општите услови. </p>
 <p>За било какви прашања околу апликацијата контактирајте го вашиот личен советник. </p>
 <p>
-    <span>Ваш советник: </span><b>Елена Цветкова</b><br/>
-    <span>Телефон: </span><b>076/265-661</b><br/>
+    <span>Ваш советник: </span><b><span t-esc="user.name"/></b><br/>
+    <span>Телефон: </span><b>${user.partner_id.mobile or user.partner_id.phone or ''}</b><br/>
     <span>Е-пошта: </span><a href="mailto:support@targetgroup.mk">support@targetgroup.mk</a>
 </p>
 <p class="text-muted">
